prueba de routes 2

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <th scope="row">1</th>
                 <td>Accordion</td>
                 <td>Build vertically collapsing accordions.</td>
-                <td><a href="/components/Accordion.html" class="btn btn-primary">Go component</a></td>
+                <td><a href="components/Accordion.html" class="btn btn-primary">Go component</a></td>
               </tr>
               <tr>
                 <th scope="row">2</th>
