Finalizado y listo para revision

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 
               </tr>
 
-
+<!-- 
               <tr>
                 <th scope="row">3</th>
                 <td>Notifications</td>
                 <td>Push notifications to your visitors.</td>
                 <td><a href="components/Notifications.html" class="btn btn-primary">Go component</a></td>
-              </tr>
+              </tr> -->
 
               <tr>
                 <th scope="row">3.1</th>
@@ -92,12 +92,12 @@
                 <td><a href="components/Spinners.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
-              <tr>
+              <!-- <tr>
                 <th scope="row">4</th>
                 <td>Information</td>
                 <td>Lorem ipsum dolor sit, amet consectetur.</td>
                 <td><a href="components/informations.html" class="btn btn-primary">Go component</a></td>
-              </tr>
+              </tr> -->
 
               <tr>
                 <th scope="row">4.1</th>
@@ -113,12 +113,12 @@
                 <td><a href="components/Pagination.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
-              <tr>
+              <!-- <tr>
                 <th scope="row">5</th>
                 <td>Buttons</td>
                 <td>Use Bootstrap’s custom button styles for actions in forms.</td>
                 <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
-              </tr>
+              </tr> -->
 
               <tr>
                 <th scope="row">5.1</th>
@@ -137,134 +137,134 @@
               <tr>
                 <th scope="row">5.3</th>
                 <td>Close button</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>A generic close button for dismissing content like modals and alerts.</td>
+                <td><a href="components/Closebutton.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">6</th>
                 <td>Card</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Bootstrap’s cards.</td>
+                <td><a href="components/card.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">7</th>
                 <td>Carousel</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>A slideshow component for cycling through elements.</td>
+                <td><a href="components/Carousel.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">8</th>
                 <td>Collapse</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Toggle the visibility of content.</td>
+                <td><a href="components/Collapse.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">9</th>
                 <td>Dropdowns</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Toggle contextual overlays for displaying lists.</td>
+                <td><a href="components/Dropdowns.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">10</th>
                 <td>List group</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>List groups are a flexible and powerful component.</td>
+                <td><a href="components/List group.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">11</th>
                 <td>Modal</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Use Bootstrap’s JavaScript modal.</td>
+                <td><a href="components/Modal.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">12</th>
                 <td>Navs & tabs</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Documentation and examples for how to use Bootstrap’s.</td>
+                <td><a href="components/Navs & tabs.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">13</th>
                 <td>Navbar</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Documentation and examples for Bootstrap’s powerful.</td>
+                <td><a href="components/Navbar.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">14</th>
                 <td>Offcanvas</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Build hidden sidebars into your project for navigation.</td>
+                <td><a href="components/Offcanvas.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">15</th>
                 <td>Placeholders</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Easily extend form controls by adding text.</td>
+                <td><a href="components/Placeholders.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">16</th>
                 <td>Popovers</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Documentation and examples for adding Bootstrap popovers.</td>
+                <td><a href="components/Popovers.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">17</th>
                 <td>Progress</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Documentation and examples for using Bootstrap custom progress.</td>
+                <td><a href="components/Progress.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">18</th>
                 <td>Scrollspy</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Automatically update Bootstrap navigation or list group components.</td>
+                <td><a href="components/Scrollspy.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">19</th>
                 <td>Toasts</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Push notifications to your visitors with a toast.</td>
+                <td><a href="components/Toasts.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">20</th>
                 <td>Tooltips</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Documentation and examples for adding custom Bootstrap tooltips.</td>
+                <td><a href="components/Tooltips.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">21</th>
                 <td>Tables</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Documentation and examples for opt-in styling of tables.</td>
+                <td><a href="components/Tables.html" class="btn btn-primary">Go component</a></td>
               </tr>
 
               <tr>
                 <th scope="row">22</th>
                 <td>Forms</td>
-                <td>Lorem ipsum dolor sit.</td>
-                <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
+                <td>Documentation and examples for opt-in styling of tables.</td>
+                <td><a href="components/Forms.html" class="btn btn-primary">Go component</a></td>
               </tr>
-              <tr>
+              <!-- <tr>
                 <th scope="row">22</th>
                 <td>Forms</td>
                 <td>Lorem ipsum dolor sit.</td>
                 <td><a href="components/Buttons.html" class="btn btn-primary">Go component</a></td>
-              </tr>
+              </tr> -->
 
             </tbody>
           </table>
